Mantaflow not using subframes for particle emitters in Gas sim #70175

Closed
opened 2019-09-23 07:16:14 +02:00 by Mark Spink · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Blender Version
Broken: version: 2.81 (sub 3), branch: fluid-mantaflow (modified), commit date: 2019-08-27 23:26, hash: 552149d8f5
Worked: (optional)

Short description of error
[Mantaflow not using subframes for particle emitters in Gas sim, title says it all really]

Exact steps for others to reproduce the error
[create a couple of particle systems, add fluid inflow in physics tab, use 0 subframes for one and 50 for the other, then bake.
Here's what I get- ParticleSubframes.png
]
[Based on the default startup or an attached .blend file (as simple as possible){F7771533}]

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36 **Blender Version** Broken: version: 2.81 (sub 3), branch: fluid-mantaflow (modified), commit date: 2019-08-27 23:26, hash: `552149d8f5` Worked: (optional) **Short description of error** [Mantaflow not using subframes for particle emitters in Gas sim, title says it all really] **Exact steps for others to reproduce the error** [create a couple of particle systems, add fluid inflow in physics tab, use 0 subframes for one and 50 for the other, then bake. Here's what I get- ![ParticleSubframes.png](https://archive.blender.org/developer/F7771537/ParticleSubframes.png) ] [Based on the default startup or an attached .blend file (as simple as possible){[F7771533](https://archive.blender.org/developer/F7771533/ParticleSubframes.blend)}]
Author

Added subscriber: @marks-4

Added subscriber: @marks-4
Sebastián Barschkis was assigned by Bastien Montagne 2019-09-23 18:20:06 +02:00

Good catch, I was able to reproduce the issue. It seems there was an issue with the dependency graph. I made the particle emitter use the same setup as the mesh emitter and now I am able to generate decent smoke trails.
subframe_comparison.png

Good catch, I was able to reproduce the issue. It seems there was an issue with the dependency graph. I made the particle emitter use the same setup as the mesh emitter and now I am able to generate decent smoke trails. ![subframe_comparison.png](https://archive.blender.org/developer/F7776778/subframe_comparison.png)

The trails in the "with subframes" example seem to produce a "staircase" effect. Will investigate this further.

The trails in the "with subframes" example seem to produce a "staircase" effect. Will investigate this further.
Author

Hello & thanks! (Sebbas) Downloaded the latest build last night from blender.org, much better!
MantaflowParticleSubframes.png

You can still see 'blobs' in the smoke trail, so my next question is: can the maximum subframes setting be increased above 50 (say up to 200?!), where it seems to be fixed at as maximum as it stands?
Or am I missing another sub-sampling setting not in the emitter object's mantaflow properties?

In fact I just tried scaling an icosphere to visually match the particle size, then keyframing it to match the motion, and here's the result-
MantaflowParticle-V-MeshSubframes.png
The icosphere is at the top, and I set it's surface thickness to 0.5 to match-ish the size of the particle emitted smoke.
Still a big difference between a mesh and a particle.
Also I tried to use the mesh as a dupli object on the particle system, and it did not emit smoke- the original icosphere did if I moved it into the domain, but nothing from the dupli object bolted onto the particle - should this work? Emitting smoke from a dupli object that is (as a useable workaround for particle subframes for example).

Cheers & Thanks again!
Mark

Hello & thanks! (Sebbas) Downloaded the latest build last night from blender.org, much better! ![MantaflowParticleSubframes.png](https://archive.blender.org/developer/F7788582/MantaflowParticleSubframes.png) You can still see 'blobs' in the smoke trail, so my next question is: can the maximum subframes setting be increased above 50 (say up to 200?!), where it seems to be fixed at as maximum as it stands? Or am I missing another sub-sampling setting not in the emitter object's mantaflow properties? In fact I just tried scaling an icosphere to visually match the particle size, then keyframing it to match the motion, and here's the result- ![MantaflowParticle-V-MeshSubframes.png](https://archive.blender.org/developer/F7788648/MantaflowParticle-V-MeshSubframes.png) The icosphere is at the top, and I set it's surface thickness to 0.5 to match-ish the size of the particle emitted smoke. Still a big difference between a mesh and a particle. Also I tried to use the mesh as a dupli object on the particle system, and it did not emit smoke- the original icosphere did if I moved it into the domain, but nothing from the dupli object bolted onto the particle - should this work? Emitting smoke from a dupli object that is (as a useable workaround for particle subframes for example). Cheers & Thanks again! Mark

The comparison of the mesh / particle looks very interesting. Can you send me that file?

Emitting smoke from a dupli object does not work as of now. It'd definitely be a nice feature though, let me think about that. It sounds plausible to me, but then again it'd be highly related to the "old" particle system code ...

The comparison of the mesh / particle looks very interesting. Can you send me that file? Emitting smoke from a dupli object does not work as of now. It'd definitely be a nice feature though, let me think about that. It sounds plausible to me, but then again it'd be highly related to the "old" particle system code ...
Author

There you go- Particle-V-Mesh_Subframes.blend

Like I said- it's all 'eye-balled' size-wise to get the mesh to look roughly the same as the particle smoke-wise. And whatever you do with the 'old' particles will probably be massively disappointing in 2.8x, if you're experience is anything like mine!
Put it this way: I can't even get 2.8 to successfully use it's own particle cache! (https://developer.blender.org/T70135), Which it looks like not much is happening about, as in I reported the bug 21 odd days ago and nothing much has happened to it...
I assume anything particle related is being ignored as the system is end-of-life from what I can glean.

As an aside- I thought the new build of Mantaflow (27 Sept) had fixed the occasional 'twitch' in the smoke once noise is added, if using adaptive domain, but I managed to get in again- do you want me to report this as a bug?

Cheers again!
Mark

There you go- [Particle-V-Mesh_Subframes.blend](https://archive.blender.org/developer/F7806691/Particle-V-Mesh_Subframes.blend) Like I said- it's all 'eye-balled' size-wise to get the mesh to look roughly the same as the particle smoke-wise. And whatever you do with the 'old' particles will probably be massively disappointing in 2.8*x*, if you're experience is anything like mine! Put it this way: I can't even get 2.8 to successfully use it's own particle cache! (https://developer.blender.org/T70135), Which it looks like not much is happening about, as in I reported the bug 21 odd days ago and nothing much has happened to it... I assume anything particle related is being ignored as the system is end-of-life from what I can glean. As an aside- I thought the new build of Mantaflow (27 Sept) had fixed the occasional 'twitch' in the smoke once noise is added, if using adaptive domain, but I managed to get in again- do you want me to report this as a bug? Cheers again! Mark
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'
Member

Is this still an issue with blender 2.82?

Is this still an issue with blender 2.82?
Author

Looks OK in 2.82 to me-
2020-02-18 10-52-11.mp4
Particle emitter in foreground, mesh in background, both with 200 subframes set in emitter settings.

Looks OK in 2.82 to me- [2020-02-18 10-52-11.mp4](https://archive.blender.org/developer/F8346136/2020-02-18_10-52-11.mp4) Particle emitter in foreground, mesh in background, both with 200 subframes set in emitter settings.
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'

Added subscriber: @SlyNine

Added subscriber: @SlyNine

image.png

I'm still having issues. The smoke works fine by itself. But when I add fire I get this effect. The top one has sub-frames set to 200 while the bottom is default. It seems it's having an effect but I don't believe it's the desired effect.

![image.png](https://archive.blender.org/developer/F8347475/image.png) I'm still having issues. The smoke works fine by itself. But when I add fire I get this effect. The top one has sub-frames set to 200 while the bottom is default. It seems it's having an effect but I don't believe it's the desired effect.
Author

@SlyNine Agreed that looks nasty.
2020-02-19 09-50-07.mp4

But I think we've missed the boat in this bug...

@SlyNine Agreed that looks nasty. [2020-02-19 09-50-07.mp4](https://archive.blender.org/developer/F8349102/2020-02-19_09-50-07.mp4) But I think we've missed the boat in this bug...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70175
No description provided.