Fix T70175: Mantaflow not using subframes for particle emitters in Gas sim

Fixes issue with particle emitter not considering subframes